# algo-NeoQuantXperience

./: AlgoTrader.py  README.md  app.py  news.pkl  pyproject.toml
algo_neoquantxperience/: common_constants.py  test_algotrader.ipynb
algo_neoquantxperience/algotrader/: AlgoTrader.py  TemporalFusionTransformer.pt  make_future_timesteps.py  tradebot.py  utils.py
algo_neoquantxperience/datasets_for_algotrader/: 45tickers_metainfo.csv  sentiment_scores.parquet
algo_neoquantxperience/moexalgopack/: utils.py
algo_neoquantxperience/nlp/: chain.py  parse.py  score.py  settings.py  structs.py  utils.py
algo_neoquantxperience/tinkoff_api/: create_dict_tickers_figi.py  settings.py  tinkoff_api.py
data/nlp/: ticker_news_map_with_scores.pkl
